# victorciurana.com

./: .env  .gitignore  Dockerfile  Dockerfile.prod  Makefile  README.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  entrypoint.prod.sh  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt  tmp.txt  tox.ini
.envs/.local/: .env.dev
.envs/.prod/: .env.pgp.prod  .env.prod  .env.prod.db  .env.prod.proxy-companion  .prod.dec.env  .prod.env  .prod.test.env
.envs/.staging/: .env.staging
.github/workflows/: ci.yml  test.yml
app/: settings.py  urls.py
app/blog/: models.py  urls.py  views.py
app/blog/migrations/: 0001_initial.py
app/blog_api/: apps.py  serializers.py  urls.py  views.py
app/config/: celery.py  settings.py  urls.py  wsgi.py
app/newsletter/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
app/newsletter/migrations/: 0001_initial.py  0002_emailsubscription_validated.py
blog/: admin.py  models.py  urls.py  views.py
blog/tests/: test_functional.py  test_models.py  test_views.py
deploy_tools/: gunicorn-systemd.template.service  nginx.template.conf
deploytools/nginx/: Dockerfile  nginx.conf
requirements/: requirements_dev.txt  requirements_prod.txt
static/css/: styles.css
static/sass/: styles.scss
static/sass/base/: _reset.scss  _variables.scss
static/sass/fonts/: _fonts.scss
static/sass/html/: _a.scss  _article.scss  _button.scss  _footer.scss  _header.scss  _main.scss  _nav.scss  _ul.scss
templates/: base.html  index.html
templates/blog/: blogpost_detail.html  blogpost_list.html
templates/newsletter/: form.html  thanks.html
templates/static/css/: github.stye.min.css  styles.css
templates/static/js/: highlight.min.js  linenum.min.js
tests/blog/: test_functional.py  test_models.py  test_views.py
tests/blog_api/: conftest.py  test_views.py
tests/newsletter/: conftest.py  test_models.py  test_utils.py  test_views.py
