[tool.poetry]
name = "victorciurana.com"
version = "0.1.0"
description = ""
authors = ["Victor <admin@victorciurana.com>"]

[tool.poetry.dependencies]
appdirs = "1.4.4"
asgiref = "3.3.4"
attrs = "21.2.0"
certifi = "2020.12.5"
chardet = "4.0.0"
click = "7.1.2"
distlib = "0.3.1"
Django = "3.2"
django-markdownx = "3.0.1"
django-otp = "1.0.5"
djangorestframework = "3.12.4"
filelock = "3.0.12"
gunicorn = "20.1.0"
idna = "2.10"
iniconfig = "1.1.1"
Markdown = "3.3.4"
martor = "1.6.2"
mccabe = "0.6.1"
mypy-extensions = "0.4.3"
packaging = "20.9"
pathspec = "0.8.1"
Pillow = "8.2.0"
pluggy = "0.13.1"
psycopg2-binary = "2.8.6"
py = "1.10.0"
pyparsing = "2.4.7"
python-environ = "0.4.54"
pytz = "2021.1"
qrcode = "6.1"
regex = "2021.4.4"
requests = "2.25.1"
six = "1.15.0"
sqlparse = "0.4.1"
toml = "0.10.2"
urllib3 = "1.26.4"

[tool.poetry.dev-dependencies]
black = "21.4b2"
django-sass = "1.0.1"
flake8 = "3.9.2"
isort = "5.8.0"
libsass = "0.20.1"
pycodestyle = "2.7.0"
pyflakes = "2.3.1"
pytest = "6.2.4"
pytest-black = "0.3.12"
pytest-django = "4.2.0"
pytest-flake8 = "1.0.7"
selenium = "3.141.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
